--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "svelte": "^4.2.10",
+    "svelte": "^4.2.17",
     "vite": "^5.1.0"
   },
   "dependencies": {
-    "axios": "^1.6.7"
+    "axios": "^1.7.2",
+    "d3": "^7.9.0",
+    "leaflet": "^1.9.4",
+    "svelte-routing": "^2.13.0",
+    "three": "^0.164.1"
   }
 }
