--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "d3": "^7.9.0",
     "leaflet": "^1.9.4",
     "svelte-routing": "^2.13.0",
+    "svelte-spa-router": "^4.0.1",
     "three": "^0.164.1"
   }
 }
